chore: replace quagga with @ericblade/quagga2 and update package.json

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
+    "@ericblade/quagga2": "^1.8.4",
     "@reduxjs/toolkit": "^2.0.1",
     "@tensorflow/tfjs": "^4.15.0",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
     "localforage": "^1.10.0",
-    "quagga": "^0.6.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
