--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
-    "@ericblade/quagga2": "^1.8.4",
     "@reduxjs/toolkit": "^2.0.1",
     "@tensorflow/tfjs": "^4.15.0",
     "axios": "^1.6.2",
@@ -18,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-native-vision-camera": "^4.7.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
