--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
-    "react-native-vision-camera": "^4.7.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
@@ -68,7 +67,7 @@
     "test:coverage": "jest --coverage",
     "type-check": "tsc --noEmit",
     "build:android": "npm run build && npx cap sync && npx cap open android",
-    "build:android:apk": "npm run build && npx cap sync && cd android && ./gradlew assembleDebug"
+    "build:android:apk": "npm run build && npx cap sync && cd android && gradlew assembleDebug"
   },
   "browserslist": {
     "production": [
