--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
+    "@ericblade/quagga2": "^1.8.4",
     "@reduxjs/toolkit": "^2.0.1",
     "@tensorflow/tfjs": "^4.15.0",
     "axios": "^1.6.2",
